--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@ body {
   min-width: 100px;
   height: 300px;
   margin-bottom: 150px;
-  padding-top: 40px;
+  padding-top: 38px;
   background: #847462 no-repeat center url("https://img.freepik.com/free-photo/flat-lay-health-still-life-arrangement-with-copy-space_23-2148854064.jpg?w=2000");
   background-size: cover;
   color: #ffffff;
@@ -23,6 +23,13 @@ ht{
   font-size: 45px;
   line-height: 20px;
   color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: left;
+  }
+.back-ht{
+  padding-left: 40px;
+  background-size: 35px;
+  background-image: url("pngfind.com-band-aid-png-29393.png");
 }
 .container {
   width: auto;
@@ -35,8 +42,6 @@ ht{
   vertical-align: top;
   width: 24%;
   margin: 0 5px;
-  background-repeat: no-repeat;
-  background-position: center top;
   text-transform: uppercase;
   font-size: 18px;
   color: #ffffff;
