--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #444444;
+  margin-bottom: 200;
 }
 .site-header {
   min-width: 100px;
@@ -47,15 +48,15 @@ ht{
   color: #ffffff;
   text-shadow: 2px 2px 4px #000000;
 }
-/* .App {
+/*  .App {
   text-align: center;
   background-color:rgb(5, 109, 113);
-}
+} */
  
 .label{
   display: block;
   font-size: larger;
-  color: white;
+  color:#000000;
   padding: 5px;
 }
  
@@ -65,7 +66,34 @@ ht{
   margin: 2px;
   
 }
-.btn{
+.features {
+  width: 100%;
+  position: absolute;
+  padding: 0 20px;
+  text-align: center;
+  margin: 0 auto 200px;
+  text-shadow: 0px 1px 0px #000000;
+}
+.site-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: #81d2d1;
+  color: #ffffff;
+}
+
+.site-footer .con {
+  text-align: center;
+}
+
+.site-footer p {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0 20px;
+}
+/*.btn{
   color: white;
   background-color: rgb(77, 21, 21);
   border-radius: 5px;
@@ -96,4 +124,4 @@ ht{
   width: fit-content;
   height: 50px;
   padding: 5px;
-} */
+} */ 
