--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,6 +69,9 @@ ht{
   margin: 0 auto 100px;
   text-shadow: 0px 1px 0px #000000;
 }
+.features h1 {
+  color: rgb(60, 81, 81);
+}
 .site-footer {
   position: fixed;
   left: 0;
