--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,7 +48,10 @@ ht{
   color: #ffffff;
   text-shadow: 2px 2px 4px #000000;
 }
- 
+.text-link{
+  color:#ffffff
+}
+
 .label{
   display: block;
   font-size: larger;
@@ -124,4 +127,19 @@ ht{
   height: 50px;
   padding: 5px;
 } 
+
+.table_a{
+  text-align: left;
+  text-shadow: 0px 1px 0px #000000;
+  font-size: 20px;
+  padding: 0 30px;
+  margin: 0 5px;
+}
+
+.change{
+  padding: 0 30px;
+  color:rgb(255, 0, 0);
+}
+
+
 
