--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,7 +60,7 @@ ht{
 }
  
 .input{
-  font-size: larger;
+  font-size: large;
   padding: 5px;
   margin: 2px;
   
@@ -141,5 +141,44 @@ ht{
   color:rgb(255, 0, 0);
 }
 
+.app-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 1rem;
+}
 
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,td {
+  border: 1px solid #ffffff;
+  text-align: left;
+  padding: 8px;
+  font-size: 10px;
+}
+
+th {
+  background-color: rgb(117, 201, 250);
+}
+
+td {
+  background-color: rgb(205, 235, 253);
+}
+
+form {
+  display: flexbox;
+  gap: 5px;
+}
+
+form td:last-child {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+form * {
+  font-size: 15px;
+}
 
