--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,7 +70,6 @@ ht{
   padding: 0 20px;
   text-align: center;
   margin: 0 auto 100px;
-  text-shadow: 0px 1px 0px #000000;
 }
 .features h1 {
   color: rgb(60, 81, 81);
@@ -144,7 +143,7 @@ ht{
 .app-container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
   padding: 1rem;
 }
 
@@ -171,6 +170,7 @@ td {
 form {
   display: flexbox;
   gap: 5px;
+  margin-bottom: 60px;
 }
 
 form td:last-child {
