--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
   min-width: 100px;
   height: 400px;
   padding-top: 38px;
-  background-image: url(main-background.jpeg);
+  background-image: url(image/main-background.jpeg);
   background-size: cover;
   color: #ffffff;
 }
@@ -18,7 +18,7 @@ ht{
 .back-ht{
   padding-left: 40px;
   background-size: 35px;
-  background-image: url("pngfind.com-band-aid-png-29393.png");
+  background-image: url("image/pngfind.com-band-aid-png-29393.png");
 }
 .container {
   display: grid;
@@ -72,6 +72,14 @@ img{
   margin: auto;
   border: 2px solid;
   border-radius: 4px;
+}
+.input-t{
+  margin-left: 15px;
+  margin-bottom: 10px;
+}
+.l{
+  margin-bottom: 8px;
+  margin-right: 10px;
 }
 .input-l{
   width:15%;
