--- a/client/src/App.css
+++ b/client/src/App.css
@@ -94,7 +94,10 @@ img{
   width: 100%;
   margin: 0 auto 150px;
 }
-
+.box-body{
+  width: 90%;
+  margin: auto;
+}
 .con-body{
   width: 60%;
   padding-top: 20px;
