--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,31 @@ ht{
   background-repeat: no-repeat;
   background-position: left;
 }
+.popup{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popup-inner{
+  position: relative;
+  padding: 32px;
+  width: 100%;
+  max-width: 640px;
+  background-color: #ffffff;
+
+
+}
+.popup-inner .button-close{
+  position: absolute;
+  top: 16px;
+  right: 16px;
+}
 .back-ht{
   padding-left: 40px;
   background-size: 35px;
