--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,10 +25,10 @@ ht{
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: #000000;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: hsl(0, 1%, 26%, 0.7);
 }
 .popup-inner{
   position: relative;
