--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
 }
 .site-header{
   min-width: 100px;
-  height: 400px;
+  height: 300px;
   padding-top: 38px;
   background-image: url(image/main-background.jpeg);
   background-size: cover;
@@ -13,7 +13,7 @@
 .text-link{
   color:#ffffff
 }
-ht{
+.ht{
   font-family: "Arial", sans-serif;
   font-size: 45px;
   background-repeat: no-repeat;
