--- a/client/src/App.css
+++ b/client/src/App.css
@@ -240,7 +240,7 @@ form * {
   bottom: 0;
   width: 100%;
   text-align: center;
-  background-color: rgb(130, 162, 238);
+  background-color: #0dcaf0;
   /* background-color: rgb(154, 209, 213); */
   color: #ffffff;
 }
