--- a/client/src/App.css
+++ b/client/src/App.css
@@ -166,7 +166,8 @@ input[type=file]{
   color: rgb(0, 0, 0);
 }
 select{
-  width: 80%;
+  width: 100%;
+  height: 37px;
   font-size: large;
 }
 .messages{
