--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,6 +150,10 @@ input[type=file]{
   margin: auto;
   margin-top: 100px;
 }
+.b-body{
+  width: 90%;
+  margin: auto;
+}
 .con-body{
   width: 60%;
   padding-top: 10px;
